tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_statement_extern.objc3
module MisplacedQualifierStatementExtern;

fn main() -> i32 {
  extern let value = 1;
  return value;
}